samples/_failures_safe/1761511393_7e89c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_042c6c90.c: In function ‘main’:
./samples/SAFE/__tmp_042c6c90.c:144:12: error: missing terminating " character
  144 |     printf("Enter first matrix:\n
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_042c6c90.c:144:5: error: expected expression at end of input
  144 |     printf("Enter first matrix:\n
      |     ^~~~~~
./samples/SAFE/__tmp_042c6c90.c:144:5: error: expected declaration or statement at end of input
